--- a/views/author.ejs
+++ b/views/author.ejs
@@ -1,10 +1,9 @@
 <h1>Author</h1>
 
 <p>
-    This Web Site has been created by me.
+    This Web Site has been created by Ramón Inarejos Pérez.
 </p>
 
-<img src="/images/avatar.png" width="200" />
 
 <hr />
 
